// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scaffold/index.js Server Side Application folder structure matches the snapshot 1`] = `
"
./
├── /assets
|  ├── /config
|  |  └── /webpack
|  |     ├── base.js
|  |     ├── blocks.js
|  |     ├── html.js
|  |     └── index.js
|  ├── /fonts
|  ├── /images
|  ├── /media
|  ├── /scripts
|  |  └── main.js
|  └── /styles
|     └── main.scss
├── /public
|  └── /assets
└── webpack.config.js

directory: 10 file: 7 symboliclink: 1 

[2K[1G"
`;

exports[`scaffold/index.js Single Page Application folder structure matches the snapshot 1`] = `
"
./
├── .babelrc
├── .browserslistrc
├── .browsersyncrc
├── /app
|  ├── /config
|  |  └── /webpack
|  |     ├── base.js
|  |     ├── blocks.js
|  |     ├── html.js
|  |     └── index.js
|  ├── /fonts
|  ├── /images
|  ├── index.ejs
|  ├── /media
|  ├── /scripts
|  |  └── main.js
|  └── /styles
|     └── main.scss
├── /public
└── webpack.config.js

directory: 9 file: 15 symboliclink: 1 

[2K[1G"
`;
